--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,9 @@ postions and responsives styles
 ===================================================*/
 
 .header_container_nav {
-    background-color: black;
+
+    position: relative;
+    z-index: 1000;
 
 }
 
@@ -51,8 +53,7 @@ postions and responsives styles
 .nav_container {
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-right: 50px;
-    margin-left: 60px;
+    margin-left: 50px;
 }
 
 .nav_navigation {
@@ -77,20 +78,15 @@ postions and responsives styles
 
 .nav_container>.nav_navigation>.nav_item>.nav_item_information {
     font-size: var(--font_p3);
-    padding: 12px;
+    padding: 6px;
     font-family: var(--font-noto);
 }
 
 .nav_container>.nav_navigation>.nav_item>.nav_item_phone {
-
-    background-size: 30px;
-    background-position: 2px 2px 2px 2px;
-    background-repeat: no-repeat;
     font-size: var(--font_p2);
-    font-weight:bold;
-    padding-top: 8px;
+    font-weight: bold;
     font-family: var(--font-noto);
-    display: block ruby;
+
 }
 
 embed {
@@ -114,9 +110,122 @@ embed {
 
 }
 
+/*=================================================
+2 . - slider colors and styles
+===================================================*/
+.slider_container {
+    margin-top: -8%;
+    position: relative;
+    z-index: -999;
+    background: black;
+}
 
 
 
+
+.slideshow {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+
+
+}
+
+.slideshow ul {
+    position: relative;
+    left: 0%;
+    margin: auto;
+    height: auto;
+    clear: both;
+    display: table;
+}
+
+
+
+.slide-show-item {
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    opacity: 0.1;
+    animation: cycleImages 5s infinite;
+
+}
+
+.slide-show-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slideshow ul .slide-show-item {
+    position: relative;
+    float: left;
+}
+
+.slideshow ul .slide-show-item img {
+    width: 100%;
+}
+
+
+
+
+.slideshow>.slide-show-item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--sub_overlay);
+}
+
+.slideshow-item:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.slideshow-item:nth-child(2) {
+    animation-delay: 10s;
+}
+
+.slideshow-item:nth-child(3) {
+    animation-delay: 20s;
+}
+
+
+
+.slide-show-item-text {
+    max-width: 50%;
+    position: absolute;
+    top: 15%;
+    left: 100px;
+    margin-bottom: 2.5rem;
+    transform: translateY(50%);
+    color: var(--bg_white);
+    font-size: var(--font_h1);
+    font-family: var(--font-noto);
+}
+
+
+.slide-show-item-text>.linea {
+
+    border: 0;
+    height: .2rem;
+    background-image: linear-gradient(170deg, #fff, #fff, #f0f0f0, #f0f0f0, #f0f0f0, var(--gradient_main), var(--gradient_main), var(--gradient_main));
+}
+
+@keyframes cycleImages {
+    25% {
+        opacity: 1;
+
+    }
+
+    40% {
+        opacity: 0;
+    }
+
+}
 
 /*=============================================
 1.-RESPONSIVE PC
@@ -169,14 +278,47 @@ PANTALLA DE PHONES - EXTRA SMALL (xs) - revisamos en movil horizontal 480px o ve
 
 @media(max-width:767px) {
 
-    .logo-img {
-        max-width: 50%;
-        height: auto;
-        margin-left: 25%;
-        margin-right: 25%;
-        margin-top: 30px;
-        margin-bottom: 30px;
+    .logo_container {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        margin-bottom: 10px;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
 
+    .nav_container {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        margin: 0px 0px 30px 0px;
+
+
+    }
+
+    .logo-img {
+        max-width: 100%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+
+
+    }
+
+
+    .nav_navigation {
+        color: var(--bg_white);
+        display: flex;
+        justify-content: center;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+
+    .nav_time {
+        display: flex;
+        justify-content: center;
+        margin: 0px;
     }
 
 
