--- a/css/style.css
+++ b/css/style.css
@@ -113,119 +113,155 @@ embed {
 /*=================================================
 2 . - slider colors and styles
 ===================================================*/
-.slider_container {
-    margin-top: -8%;
-    position: relative;
-    z-index: -999;
-    background: black;
+.carousel_section {
+    margin-top: -16%;
 }
 
+/* carousel */
+.carousel {
+    position: relative;
+}
 
-
-
-.slideshow {
+.carousel_inner {
     width: 100%;
-    height: 100vh;
-    position: relative;
     overflow: hidden;
-    margin: auto;
-
-
 }
 
-.slideshow ul {
-    position: relative;
-    left: 0%;
-    margin: auto;
-    height: auto;
+.carousel_inner::after {
+    content: "";
+    display: block;
     clear: both;
-    display: table;
 }
 
 
 
-.slide-show-item {
-    width: inherit;
-    height: inherit;
-    position: absolute;
-    opacity: 0.1;
-    animation: cycleImages 5s infinite;
 
+.carousel_item {
+    position: relative;
+    float: left;
+    display: none;
+    width: 100%;
+    margin-right: -100%;
 }
 
-.slide-show-item img {
+.carousel_item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    animation: zoom 31s infinite;
+    filter: brightness(50%);
+
 }
 
-.slideshow ul .slide-show-item {
-    position: relative;
-    float: left;
+
+
+/* slide effect */
+.carousel_item__active,
+.carousel_item__pos_prev,
+.carousel_item__pos_next {
+    display: block;
 }
 
-.slideshow ul .slide-show-item img {
+.carousel_item__pos_prev {
+    left: -100%;
+}
+
+.carousel_item__pos_next {
+    left: 100%;
+}
+
+.carousel_item__prev {
+    transform: translateX(100%);
+    transition: transform .5s ease-in-out;
+}
+
+.carousel_item__next {
+    transform: translateX(100%);
+    transition: transform .10s ease-in-out;
+}
+
+
+
+
+
+/* fade effect */
+.carousel__fade .carousel_item__pos_prev,
+.carousel__fade .carousel_item__pos_next {
+    left: 0;
+    opacity: 0;
+}
+
+.carousel__fade .carousel_item__prev,
+.carousel__fade .carousel_item__next {
+    transform: none;
+    opacity: 1;
+    transition: opacity .9s ease-in-out;
+}
+
+.carousel__fade .carousel_item__active.carousel_item__prev,
+.carousel__fade .carousel_item__active.carousel_item__next {
+    opacity: 0;
+}
+
+@keyframes zoom {
+    100% {
+        transform: scale(1.5);
+    }
+
+}
+
+/* carousel */
+.carousel_img {
+    display: block;
     width: 100%;
 }
 
-
-
-
-.slideshow>.slide-show-item::before {
-    content: '';
+.carousel_caption {
     position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
-    background-color: var(--sub_overlay);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 3rem 4rem;
+    text-align: left;
+    color: #fff;
+    z-index: 1;
+    margin-left: 50px;
 }
 
-.slideshow-item:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.slideshow-item:nth-child(2) {
-    animation-delay: 10s;
-}
-
-.slideshow-item:nth-child(3) {
-    animation-delay: 20s;
-}
-
-
-
-.slide-show-item-text {
-    max-width: 50%;
-    position: absolute;
-    top: 15%;
-    left: 100px;
-    margin-bottom: 2.5rem;
-    transform: translateY(50%);
-    color: var(--bg_white);
-    font-size: var(--font_h1);
+.carousel_title {
     font-family: var(--font-noto);
+    font-size: var(--font_h1);
+    font-weight: 600;
+}
+
+.carousel_description {
+    transform-origin: 100% 50%;
+    transform: rotateZ(-90deg);
+    left: -256px;
+    position: absolute;
+    text-transform: uppercase;
+    font-size: var(--font_p2);
+    margin-bottom: 14.6%;
+    font-family: var(--font-lato);
+    color: var(--sub_Color);
 }
 
 
-.slide-show-item-text>.linea {
-
+.carousel_caption>.linea {
     border: 0;
-    height: .2rem;
+    height: .3rem;
+    width: 40%;
     background-image: linear-gradient(170deg, #fff, #fff, #f0f0f0, #f0f0f0, #f0f0f0, var(--gradient_main), var(--gradient_main), var(--gradient_main));
 }
 
-@keyframes cycleImages {
-    25% {
-        opacity: 1;
 
-    }
 
-    40% {
-        opacity: 0;
-    }
 
-}
+
 
 /*=============================================
 1.-RESPONSIVE PC
@@ -321,5 +357,32 @@ PANTALLA DE PHONES - EXTRA SMALL (xs) - revisamos en movil horizontal 480px o ve
         margin: 0px;
     }
 
+    /*=================================================
+2 . - slider responsive
+===================================================*/
+    .carousel_section {
+        margin-top: -55%;
+    }
+
+
+    .carousel_item img {
+        width: auto;
+        height: 600px;
+    }
+
+    .carousel_title {
+        font-size: 27px;
+    }
+
+
+    .carousel_description {
+        left: -30%;
+        font-size: var(--font_p4);
+        margin-bottom: 40%;
+    }
+
+    .carousel_caption>.linea {
+        width: 100%;
+    }
 
 }
